--- a/OneDance/UI/ViewControllers/MapViewController.xib
+++ b/OneDance/UI/ViewControllers/MapViewController.xib
@@ -31,6 +31,9 @@
                         <constraint firstAttribute="width" constant="50" id="vdE-QR-Bc5"/>
                     </constraints>
                     <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="showUserLocationButtonTapped:" destination="-1" eventType="touchUpInside" id="tuh-LT-8Vl"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
