TA30008 - Email login is implemented including MVVM-C and network calls.

--- a/OneDance/Authentication/MainAuthViewController.xib
+++ b/OneDance/Authentication/MainAuthViewController.xib
@@ -51,6 +51,9 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17a-Be-n7J">
                     <rect key="frame" x="62" y="567" width="250" height="50"/>
                     <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="loginButtonTapped:" destination="-1" eventType="touchUpInside" id="fDn-aJ-J4K"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qnd-sm-LUW">
                     <rect key="frame" x="62" y="236.5" width="250" height="20.5"/>
