TA40002 - Selected dance types are implemented.

--- a/OneDance/ViewControllers/ProfileSetup/DanceTypesViewController.xib
+++ b/OneDance/ViewControllers/ProfileSetup/DanceTypesViewController.xib
@@ -32,6 +32,9 @@
                         <constraint firstAttribute="height" constant="50" id="y48-tM-Xdl"/>
                     </constraints>
                     <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="doneButtonTapped:" destination="-1" eventType="touchUpInside" id="qvo-bI-CQc"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
