--- a/OneDance/ViewControllers/Authentication/LoginViewController.xib
+++ b/OneDance/ViewControllers/Authentication/LoginViewController.xib
@@ -14,6 +14,7 @@
             <connections>
                 <outlet property="contentView" destination="aU4-Hz-JwS" id="HEr-An-JC3"/>
                 <outlet property="emailTextField" destination="f7j-rt-cz6" id="68p-4P-8H7"/>
+                <outlet property="loginTypeControl" destination="nvF-vx-o5G" id="FH9-yw-edK"/>
                 <outlet property="mainScrollView" destination="Hj9-Wg-8WY" id="1nG-U4-apQ"/>
                 <outlet property="passwordTextField" destination="wnT-BZ-tAO" id="4AH-4d-w1t"/>
                 <outlet property="submitLoginButton" destination="rUW-pi-2pc" id="1wZ-K2-Wz0"/>
@@ -32,16 +33,29 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aU4-Hz-JwS">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="800.5"/>
                             <subviews>
+                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="nvF-vx-o5G">
+                                    <rect key="frame" x="19" y="87" width="337.5" height="29"/>
+                                    <segments>
+                                        <segment title="First"/>
+                                        <segment title="Second"/>
+                                    </segments>
+                                    <connections>
+                                        <action selector="loginTypeChanged:" destination="-1" eventType="valueChanged" id="tdr-cQ-10w"/>
+                                    </connections>
+                                </segmentedControl>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vtK-cP-25R">
-                                    <rect key="frame" x="18.5" y="125" width="337.5" height="150"/>
+                                    <rect key="frame" x="18.5" y="165" width="337.5" height="150"/>
                                     <subviews>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7j-rt-cz6">
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7j-rt-cz6">
                                             <rect key="frame" x="0.0" y="15" width="337.5" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="bNr-km-UWf"/>
+                                            </constraints>
                                             <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wnT-BZ-tAO">
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wnT-BZ-tAO">
                                             <rect key="frame" x="0.0" y="105" width="337.5" height="30"/>
                                             <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -61,7 +75,7 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rUW-pi-2pc">
-                                    <rect key="frame" x="62" y="325" width="250" height="50"/>
+                                    <rect key="frame" x="62" y="365" width="250" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="250" id="Uc1-JN-dzd"/>
                                         <constraint firstAttribute="height" constant="50" id="ZD2-PZ-zb3"/>
@@ -78,7 +92,10 @@
                                 <constraint firstItem="rUW-pi-2pc" firstAttribute="centerX" secondItem="aU4-Hz-JwS" secondAttribute="centerX" id="3yz-sR-U0I"/>
                                 <constraint firstItem="vtK-cP-25R" firstAttribute="width" secondItem="aU4-Hz-JwS" secondAttribute="width" multiplier="0.9" id="73U-jl-zyy"/>
                                 <constraint firstItem="vtK-cP-25R" firstAttribute="centerX" secondItem="aU4-Hz-JwS" secondAttribute="centerX" id="E8p-tq-dPd"/>
-                                <constraint firstItem="vtK-cP-25R" firstAttribute="centerY" secondItem="aU4-Hz-JwS" secondAttribute="centerY" multiplier="0.5" id="FId-G5-lg2"/>
+                                <constraint firstItem="vtK-cP-25R" firstAttribute="centerY" secondItem="aU4-Hz-JwS" secondAttribute="centerY" multiplier="0.6" id="FId-G5-lg2"/>
+                                <constraint firstItem="vtK-cP-25R" firstAttribute="top" secondItem="nvF-vx-o5G" secondAttribute="bottom" constant="50" id="TYl-3O-7LP"/>
+                                <constraint firstItem="nvF-vx-o5G" firstAttribute="width" secondItem="vtK-cP-25R" secondAttribute="width" id="Wr2-ud-8r6"/>
+                                <constraint firstItem="nvF-vx-o5G" firstAttribute="centerX" secondItem="aU4-Hz-JwS" secondAttribute="centerX" id="iHL-De-RDc"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -99,6 +116,7 @@
                 <constraint firstItem="aU4-Hz-JwS" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="1.2" id="wZp-bj-grL"/>
                 <constraint firstItem="aU4-Hz-JwS" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="ysA-P8-0yV"/>
             </constraints>
+            <point key="canvasLocation" x="35.5" y="53.5"/>
         </view>
     </objects>
 </document>
