UF50001_TA28229 - Event, Organization and User models and view models updated. Create Event is implemented.

--- a/OneDance/ViewControllers/MainFlow/Organization/EditCreateOrganizationViewController.xib
+++ b/OneDance/ViewControllers/MainFlow/Organization/EditCreateOrganizationViewController.xib
@@ -9,9 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateOrganizationProfileViewController" customModule="OneDance" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditCreateOrganizationViewController" customModule="OneDance" customModuleProvider="target">
             <connections>
-                <outlet property="tableView" destination="rvc-8W-oEW" id="HLi-br-FeR"/>
+                <outlet property="tableView" destination="voC-Ry-L8c" id="lCv-UN-uAM"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,17 +20,17 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rvc-8W-oEW">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="voC-Ry-L8c">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="rvc-8W-oEW" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="9AV-eE-DNM"/>
-                <constraint firstItem="rvc-8W-oEW" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Yce-61-Ikz"/>
-                <constraint firstAttribute="bottom" secondItem="rvc-8W-oEW" secondAttribute="bottom" id="jiB-nD-6nE"/>
-                <constraint firstAttribute="trailing" secondItem="rvc-8W-oEW" secondAttribute="trailing" id="jis-XE-Ldg"/>
+                <constraint firstItem="voC-Ry-L8c" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ALW-Qx-Gsb"/>
+                <constraint firstItem="voC-Ry-L8c" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="L82-Ub-GXt"/>
+                <constraint firstAttribute="bottom" secondItem="voC-Ry-L8c" secondAttribute="bottom" id="Nn8-tP-PRa"/>
+                <constraint firstAttribute="trailing" secondItem="voC-Ry-L8c" secondAttribute="trailing" id="YRb-k6-djp"/>
             </constraints>
         </view>
     </objects>
