--- a/OneDance/ViewControllers/MainFlow/User/UserViewController.xib
+++ b/OneDance/ViewControllers/MainFlow/User/UserViewController.xib
@@ -13,6 +13,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserViewController" customModule="OneDance" customModuleProvider="target">
             <connections>
                 <outlet property="bioLabel" destination="yZF-Xg-1Ay" id="jRS-28-qON"/>
+                <outlet property="danceTypesCollectionView" destination="smS-g8-WOp" id="bCJ-er-3SS"/>
+                <outlet property="flowLayout" destination="Fsw-d4-cbC" id="OJR-4u-PmG"/>
                 <outlet property="followerCounterLabel" destination="qY0-rq-5yp" id="z1r-Nt-Kps"/>
                 <outlet property="followerFollowingContainer" destination="1ie-29-wqI" id="zfL-WM-Mwf"/>
                 <outlet property="followerLabel" destination="Fm9-WO-jg2" id="LQC-vo-Kk5"/>
@@ -114,16 +116,32 @@
                         <constraint firstItem="qY0-rq-5yp" firstAttribute="top" secondItem="1ie-29-wqI" secondAttribute="top" constant="8" id="n2b-HM-OTX"/>
                     </constraints>
                 </view>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="smS-g8-WOp">
+                    <rect key="frame" x="0.0" y="297.5" width="375" height="128"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="mfN-Yd-QS4"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Fsw-d4-cbC">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="1ie-29-wqI" firstAttribute="top" secondItem="Ohq-Aj-ws5" secondAttribute="bottom" id="1ei-U2-t05"/>
+                <constraint firstAttribute="trailing" secondItem="smS-g8-WOp" secondAttribute="trailing" id="7lM-8d-FIU"/>
                 <constraint firstItem="Ohq-Aj-ws5" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.35" id="OlZ-EG-VOm"/>
                 <constraint firstItem="Ohq-Aj-ws5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="RwA-gM-IBK"/>
                 <constraint firstAttribute="trailing" secondItem="1ie-29-wqI" secondAttribute="trailing" id="SKy-cn-DjN"/>
                 <constraint firstAttribute="trailing" secondItem="Ohq-Aj-ws5" secondAttribute="trailing" id="cyW-so-LA1"/>
                 <constraint firstItem="1ie-29-wqI" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="oj1-EK-Y5h"/>
+                <constraint firstItem="smS-g8-WOp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="se3-gr-ePj"/>
                 <constraint firstItem="Ohq-Aj-ws5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="srq-Qv-QN4"/>
+                <constraint firstItem="smS-g8-WOp" firstAttribute="top" secondItem="1ie-29-wqI" secondAttribute="bottom" id="wU6-rF-nCY"/>
             </constraints>
         </view>
     </objects>
