--- a/OneDance/ViewControllers/MainFlow/User/UserViewController.xib
+++ b/OneDance/ViewControllers/MainFlow/User/UserViewController.xib
@@ -14,6 +14,7 @@
             <connections>
                 <outlet property="bioLabel" destination="yZF-Xg-1Ay" id="jRS-28-qON"/>
                 <outlet property="danceTypesCollectionView" destination="smS-g8-WOp" id="bCJ-er-3SS"/>
+                <outlet property="editProfileImageView" destination="73r-S9-MPn" id="jd4-6k-2qX"/>
                 <outlet property="flowLayout" destination="Fsw-d4-cbC" id="OJR-4u-PmG"/>
                 <outlet property="followerCounterLabel" destination="qY0-rq-5yp" id="z1r-Nt-Kps"/>
                 <outlet property="followerFollowingContainer" destination="1ie-29-wqI" id="zfL-WM-Mwf"/>
@@ -33,50 +34,59 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohq-Aj-ws5">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="233.5"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LYP-7n-7fk">
-                            <rect key="frame" x="8" y="36" width="128" height="128"/>
+                            <rect key="frame" x="8" y="36.5" width="128" height="128"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="128" id="CDj-Xy-20m"/>
                                 <constraint firstAttribute="width" constant="128" id="QM9-yh-bc4"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q8O-Ih-USW">
-                            <rect key="frame" x="144" y="36" width="42" height="21"/>
+                            <rect key="frame" x="144" y="36.5" width="42" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZF-Xg-1Ay">
-                            <rect key="frame" x="144" y="65" width="42" height="21"/>
+                            <rect key="frame" x="144" y="65.5" width="42" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQM-IB-mTG">
-                            <rect key="frame" x="144" y="143" width="42" height="21"/>
+                            <rect key="frame" x="144" y="143.5" width="42" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="73r-S9-MPn">
+                            <rect key="frame" x="343" y="12.5" width="24" height="24"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="24" id="JVc-Wm-VWk"/>
+                                <constraint firstAttribute="height" constant="24" id="aWH-nA-VaJ"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="LYP-7n-7fk" firstAttribute="centerY" secondItem="Ohq-Aj-ws5" secondAttribute="centerY" multiplier="0.8" priority="250" id="D5R-k1-rDn"/>
+                        <constraint firstAttribute="height" secondItem="LYP-7n-7fk" secondAttribute="height" constant="72" id="AEd-C1-3Zm"/>
+                        <constraint firstItem="LYP-7n-7fk" firstAttribute="centerY" secondItem="Ohq-Aj-ws5" secondAttribute="centerY" id="D5R-k1-rDn"/>
+                        <constraint firstItem="LYP-7n-7fk" firstAttribute="top" secondItem="73r-S9-MPn" secondAttribute="bottom" id="HnC-nh-Sdw"/>
                         <constraint firstItem="q8O-Ih-USW" firstAttribute="leading" secondItem="LYP-7n-7fk" secondAttribute="trailing" constant="8" id="K6W-kA-LCb"/>
                         <constraint firstItem="yZF-Xg-1Ay" firstAttribute="leading" secondItem="q8O-Ih-USW" secondAttribute="leading" id="NlO-nc-raA"/>
                         <constraint firstItem="bQM-IB-mTG" firstAttribute="leading" secondItem="q8O-Ih-USW" secondAttribute="leading" id="NpP-bW-thj"/>
                         <constraint firstItem="q8O-Ih-USW" firstAttribute="top" secondItem="LYP-7n-7fk" secondAttribute="top" id="UHS-Ry-kSk"/>
                         <constraint firstItem="bQM-IB-mTG" firstAttribute="bottom" secondItem="LYP-7n-7fk" secondAttribute="bottom" id="a9s-GM-leC"/>
                         <constraint firstItem="yZF-Xg-1Ay" firstAttribute="top" secondItem="q8O-Ih-USW" secondAttribute="bottom" constant="8" id="bEt-Ge-SZP"/>
-                        <constraint firstItem="LYP-7n-7fk" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Ohq-Aj-ws5" secondAttribute="top" constant="36" id="gLz-D1-yY5"/>
                         <constraint firstItem="LYP-7n-7fk" firstAttribute="leading" secondItem="Ohq-Aj-ws5" secondAttribute="leading" constant="8" id="mHq-aK-icb"/>
                         <constraint firstItem="bQM-IB-mTG" firstAttribute="top" relation="greaterThanOrEqual" secondItem="yZF-Xg-1Ay" secondAttribute="bottom" constant="8" id="mdr-NB-N9M"/>
+                        <constraint firstAttribute="trailing" secondItem="73r-S9-MPn" secondAttribute="trailing" constant="8" id="sot-Za-PCp"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1ie-29-wqI">
-                    <rect key="frame" x="0.0" y="233.5" width="375" height="64"/>
+                    <rect key="frame" x="0.0" y="200" width="375" height="64"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fm9-WO-jg2">
                             <rect key="frame" x="73" y="39" width="42" height="21"/>
@@ -117,10 +127,10 @@
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="smS-g8-WOp">
-                    <rect key="frame" x="0.0" y="297.5" width="375" height="128"/>
+                    <rect key="frame" x="0.0" y="264" width="375" height="96"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="128" id="mfN-Yd-QS4"/>
+                        <constraint firstAttribute="height" constant="96" id="mfN-Yd-QS4"/>
                     </constraints>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Fsw-d4-cbC">
                         <size key="itemSize" width="50" height="50"/>
@@ -134,7 +144,6 @@
             <constraints>
                 <constraint firstItem="1ie-29-wqI" firstAttribute="top" secondItem="Ohq-Aj-ws5" secondAttribute="bottom" id="1ei-U2-t05"/>
                 <constraint firstAttribute="trailing" secondItem="smS-g8-WOp" secondAttribute="trailing" id="7lM-8d-FIU"/>
-                <constraint firstItem="Ohq-Aj-ws5" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.35" id="OlZ-EG-VOm"/>
                 <constraint firstItem="Ohq-Aj-ws5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="RwA-gM-IBK"/>
                 <constraint firstAttribute="trailing" secondItem="1ie-29-wqI" secondAttribute="trailing" id="SKy-cn-DjN"/>
                 <constraint firstAttribute="trailing" secondItem="Ohq-Aj-ws5" secondAttribute="trailing" id="cyW-so-LA1"/>
@@ -143,6 +152,7 @@
                 <constraint firstItem="Ohq-Aj-ws5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="srq-Qv-QN4"/>
                 <constraint firstItem="smS-g8-WOp" firstAttribute="top" secondItem="1ie-29-wqI" secondAttribute="bottom" id="wU6-rF-nCY"/>
             </constraints>
+            <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
     </objects>
 </document>
